두번째 커밋

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <script src="js/index.js">
+        //자바스크립트 코드를 작성할 수 있음
+        //alert("경고창")//자바 스크립트 코드
+
+    </script>
 </head>
 <body>
     이것은 소리없는 아우성 ㅇㅇㅇ
+    <img src="img/돼지.jpg">
+    <ul>
+        <li>서울</li>
+        <li>대구</li>
+        <li>대전</li>
+    </ul>
+
 </body>
 </html>
